--- a/templates/add_a_party.html
+++ b/templates/add_a_party.html
@@ -1,21 +1,23 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="row"  style="padding-top: 3em">
-    <div class="col-md-4 col-md-offset-4 round_div">
-        <h1>Create a party</h1><br>
+<div class="row well-spaced" style="padding-top: 3em">
+        <div class="col-md-4 col-md-offset-4">
+            <div class = "row round_div" style="padding-top: 2em">
+                <h1>Create a party</h1><br>
 
-        <form action="/party_added" method="POST">
-            <div class="form-group">
-                <label>Create a name for your party:</label>
+                <form action="/party_added" method="POST">
+                    <div class="form-group">
+                        <label>Create a name for your party:</label>
                         <input type="text" name="title" class="form-control">
-                </div>
+                    </div>
 
-                <div class="form-group">
+                    <div class="form-group">
 
-                    <input type="submit" value="Create a party" class="btn btn-success btn-block">
+                        <input type="submit" value="Create a party" class="btn btn-success btn-block">
+                    </div>
                 </div>
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
 </div>
 {% endblock %}
