--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -1,27 +1,24 @@
 {% extends 'homepage.html' %}
 {% block content %}
-<div class="well spaced">
-    <div>
-        <h1>Login</h1>
-        <form action="/loggedin" method="POST">
+<div class="row well-spaced" style="padding-top: 3em">
+    <div class="col-md-4 col-md-offset-4">
+        <div class = "row round_div" style="padding-top: 2em">
+            <h1>Login</h1>
 
-            <div class="form-group">
-                <label>Email:
+            <form action="/loggedin" method="POST">
+                <div class="form-group">
+                    <label>Email:</label>
                     <input type="email" name="email" required class="form-control">
-                </label>
-            </div>
-
-            <div class="form-group">
-                <label>Password:
+                </div><br>
+                <div class="form-group">
+                    <label>Password:</label>
                     <input type="password" name="password" required class="form-control">
-                </label>
-            </div>
-
-            <div class="form-group">
-                <input type="submit" value="Log In" class="btn">
-            </div>
-
-        </form>
+                </div><br>
+                <div class="form-group">
+                    <input type="submit" value="Log In" class="btn btn-success">
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 {% endblock %}
