--- a/templates/party_profile.html
+++ b/templates/party_profile.html
@@ -2,7 +2,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div class="row well spaced" style="padding-top: 3em">
+<div class="row well-spaced" style="padding-top: 3em">
     <div class="col-md-8 col-md-offset-2">
       
         <div class = "row round_div" style="padding-top: 2em">
@@ -13,21 +13,20 @@
             </div>
 
             <div class="col-md-8">
-
                     <b>Guests:</b>
                
                     {% for guest in party.users %}    
-                        <button type="button" class="btn btn-primary btn-block" data-toggle="tooltip" title="Click for more info {% if guest.first_name is not none %}about {{ guest.first_name }}{% else %}{{  guest.email  }}{%endif %}" id="friend_info{{  guest.user_id  }}" style="margin-top:5px">{{ guest.first_name }} {{guest.last_name }} ({{ guest.email }})</button>
+                        <button type="button" class="btn btn-warning btn-block" data-toggle="tooltip" title="Click for more info {% if guest.first_name is not none %}about {{ guest.first_name }}{% else %}{{  guest.email  }}{%endif %}" id="friend_info{{  guest.user_id  }}" style="margin-top:5px">{{ guest.first_name }} {{guest.last_name }} ({{ guest.email }})</button>
 
-                        <div class="friend_info{{  guest.user_id  }} round_hidden_div"  hidden>
-                            <button type="button" class="btn btn-danger btn-xs pull-right" id="close2{{  guest.user_id  }}">x</button>
-                            <div class="row">
+                        <div class="friend_info{{  guest.user_id  }}"  hidden>
+                            
+                            <div class="row round_hidden_div">
                                 <div class="col-md-3">
                                     <button type="button" class="btn btn-success btn-xs change_buttons{{  guest.user_id  }} btn-block" data-toggle="modal" data-target="#guest_basic_info_change{{  guest.user_id  }}" hidden>update<br>basic<br>info</button>
                                 
 
                                 </div>
-                                <div class="col-md-8">
+                                <div class="col-md-8" >
                                         <b>First name:</b> {{ guest.first_name }}<br>
                                         <b>Last name:</b> {{ guest.last_name }}<br>
                                         <b>Email address:</b> {{ guest.email }}<br>
@@ -37,7 +36,7 @@
                                 </div>
                             </div>    
 
-                            <div class="row" style="padding-top: 2em">  
+                            <div class="row round_hidden_div" style="padding-top: 2em">  
                                 <div class="col-md-3">
                                     <button type="button" class="btn btn-success btn-xs change_buttons{{  guest.user_id  }} btn-block" data-toggle="modal" data-target="#Intols{{  guest.user_id  }}" hidden>update<br>intolerance<br>allergies</button>
                                 </div>
@@ -49,7 +48,7 @@
                                 </div>
                             </div>
 
-                            <div class="row" style="padding-top: 2em">
+                            <div class="row round_hidden_div" style="padding-top: 2em">
                                 <div class="col-md-3">
                                     <button type="button" class="btn btn-success btn-xs change_buttons{{  guest.user_id  }} btn-block" data-toggle="modal" data-target="#avoids{{ guest.user_id  }}" hidden>update<br>ingredients<br>to avoid</button>
                                 </div>
@@ -101,7 +100,7 @@
                                             </div><br>
                                             <div class="form-group">
 
-                                                <input type="submit" value="update friend profile" class="btn btn-info">
+                                                <input type="submit" value="update friend profile" class="btn btn-success">
                                            
                                             </div>
                                         </form>
@@ -130,7 +129,7 @@
                                                     {% endfor %}
                                             </div><br>
                                             <div class="form-group">
-                                                <input type="submit" value="Done" class="btn-info" id="intolDone">
+                                                <input type="submit" value="Done" class="btn-success" id="intolDone">
                                             </div>
                                         </form>
                                     </div>
@@ -156,7 +155,7 @@
                                                     <input type="text" name="reason" class="form-control">
                                             </div><br>
                                             <div class="form-group">
-                                                <input type="submit" value="Done" class="btn btn-info" id="avoidDone">
+                                                <input type="submit" value="Done" class="btn btn-success" id="avoidDone">
                                             </div>
                                         </form>
                                     </div>
@@ -178,7 +177,7 @@
             <div class="col-md-8">
                 <b>Recipes:</b><br>
                     {% for recipe in party.recipes %} 
-                    <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#SeeRecipe{{ recipe.record_id  }}" style="margin-top:5px">   
+                    <button type="button" class="btn btn-warning btn-block" data-toggle="modal" data-target="#SeeRecipe{{ recipe.record_id  }}" style="margin-top:5px">   
                     {{ recipe.title }}</button>
 
             
@@ -195,7 +194,7 @@
                                 <h4 class="modal-title">{{  recipe.title  }}</h4>
                             </div>
                             <div class="modal-body">
-                                <a href="/recipe/{{  recipe.record_id  }}" target="_blank" class="btn btn-primary btn-block">Open recipe in new window</a>
+                                <a href="/recipe/{{  recipe.record_id  }}" target="_blank" class="btn btn-success btn-block">Open recipe in new window</a>
                                 <iframe src="/show_recipe/{{ recipe.record_id  }}" style="zoom:0.60" frameborder="0" height="1000" width="99.6%"></iframe>
                             </div>
                         </div>
@@ -230,7 +229,7 @@
                                     </div>
                                     <div class="form-group">
                                         <input type="hidden" name="party_id" value="{{ party.party_id }}">
-                                        <input type="submit" value="Add guest" class="btn btn-info">
+                                        <input type="submit" value="Add guest" class="btn btn-success">
                                     </div>
                                 </form>
                             </div>
@@ -257,7 +256,7 @@
                                     <input type="email" name="email_address" class="form-control">
                                 </div>
                                 <div class="form-group">
-                                    <input type="submit" value="Add Friend" class="btn btn-info">    
+                                    <input type="submit" value="Add Friend" class="btn btn-success">    
                                 </div>
                             </form>
                         </div>
@@ -301,15 +300,9 @@
     $("#friend_info{{  guest.user_id  }}").click(function(){
         // $("#friend_info{{  guest.user_id  }}").toggle();
         
-        $(".friend_info{{  guest.user_id  }}").show();
+        $(".friend_info{{  guest.user_id  }}").toggle();
         console.log("show form");
     });
-    $("#close2{{  guest.user_id  }}").click(function(){
-        $(".friend_info{{  guest.user_id  }}").hide();
-        // $("#friend_info{{  guest.user_id  }}").toggle();
-        console.log("show form");
-    });
-
 
     
     $("#close{{  guest.user_id  }}").click(function(){
