--- a/templates/recipe_profile.html
+++ b/templates/recipe_profile.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
+<div class="round_div"
  <h1>{{  this_recipe.title  }}</h1>
  <p style="text-align: center">This recipe is saved to the RecipeBox for <a href="/party_profile/{{  party.party_id  }}">{{  party.title  }}</a><br>
     <a href="{{ this_recipe.recipe_url}}" target="_blank">View recipe at Spoonacular</a></p>
