--- a/templates/register_form.html
+++ b/templates/register_form.html
@@ -1,43 +1,40 @@
 {% extends 'homepage.html' %}
 {% block content %}
-<div class="well spaced">
-    <h1>Register</h1>
 
-    <form action="/registered" method="POST">
 
-        <div class="form-group">
-            <label>
-                <strong>Email address</strong> (required): <input type="text" name="email" class="form-control">
-                
-                <strong>Password</strong> (required):
+<div class="row well-spaced" style="padding-top: 3em">
+    <div class="col-md-4 col-md-offset-4">
+        <div class = "row round_div" style="padding-top: 2em">
+           <h1>Register</h1>
+           <form action="/registered" method="POST">
+
+            <div class="form-group">
+                <label>Email address(required):</label> 
+                <input type="text" name="email" class="form-control">
+
+                <label>Password (required):</label>
                 <input type="password" name="password" class="form-control" required>
-                
-                First name (optional):
+
+                <label>First name (optional):</label>
                 <input type="text" name="first_name" class="form-control">
-                
-                Last name (optional):
+
+                <label>Last name (optional):</label>
                 <input type="text" name="last_name" class="form-control">
 
-                
-
-                <h4><strong>Diet you prefer to eat (required):</strong></h4>
-                
-                <select name="diet_type">
+                <label>Diet you prefer to eat (required):</label>                
+                <select name="diet_type" class="form-control">
                     {% for diet in diets %}
                     <option value={{ diet.diet_id }}>{{ diet.diet_type }}</option>
                     {% endfor %}
                 </select><br>
-                Reason you follow this diet (optional):<br>
+                <label>Reason you follow this diet (optional):</label><br>
                 <input type="text" name="diet_reason" class="form-control">
-
-            </label>
-        </div>
-
-
-        <div class="form-group">
-            <input type="submit" value="Register" class="btn">
-        </div>
-
-    </form>
+            </div><br>
+            <div class="form-group">
+                <input type="submit" value="Register" class="btn btn-success btn-block">
+            </div>
+        </form>
+    </div>
+</div>
 </div>
 {% endblock %}
