--- a/templates/view_recipe.html
+++ b/templates/view_recipe.html
@@ -1,8 +1,10 @@
 
 {% extends 'base.html' %}
 {% block content %}
-<h1>{{  title  }}</h1>
 <div class="row">
+<div class="col-md"
+
+<h1>{{  title  }}</h1>
     <div class="col-md-8 col-md-offset-2">
     <form action="/addtorecipebox" method="POST">
         <div class="form-group">
