Career day code freeze (pre-Todd demo)

--- a/templates/Final_search_template.html
+++ b/templates/Final_search_template.html
@@ -120,7 +120,7 @@
                         <input type="hidden" name="title" value="{{ responses['response'][i].get('title') }}">
                         <input type="hidden" name="recipe_image_url" value="{{ responses['response'][i].get('image_url') }}">
                         <input type="hidden" name="recipe_url" value="{{ responses['response'][i].get('recipe_url') }}">
-                        <button class="btn btn-primary">View recipe</button>
+                        <button class="btn btn-success">View recipe</button>
                     </form>
                     
                     <img src="{{ responses['response'][i].get('image_url') }}" class="img-circle displayed" width="250" height="250">
