--- a/templates/recipe_profile.html
+++ b/templates/recipe_profile.html
@@ -1,50 +1,38 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div class="round_div"
- <h1>{{  this_recipe.title  }}</h1>
- <p style="text-align: center">This recipe is saved to the RecipeBox for <a href="/party_profile/{{  party.party_id  }}">{{  party.title  }}</a><br>
-    <a href="{{ this_recipe.recipe_url}}" target="_blank">View recipe at Spoonacular</a></p>
-<div class="row">
-    <div class="col-md-8 col-md-offset-2" style="padding-top: 3em">
+<div class="row well-spaced" style="padding-top: 3em">
+    <div class="col-md-8 col-md-offset-2">
 
-   
+        <div class = "row round_div" style="padding-top: 2em">
 
-
-    
-\
+         <h1>{{  this_recipe.title  }}</h1>
+         <p style="text-align: center">This recipe is saved to the RecipeBox for <a href="/party_profile/{{  party.party_id  }}">{{  party.title  }}</a><br>
+            <a href="{{  this_recipe.recipe_url  }}" target="_blank">View recipe at Spoonacular</a></p>
 
             <b>Safe for:</b>
             <ul>
                 {% for key, value in works_for.iteritems() %}
-                {{  key  }}: {% for each in value %}{{  each  }}{% if not loop.last %}, {% endif %}{% endfor %}<br>{% endfor %}</li>
+            </li>{{  key  }}: {% for each in value %}{{  each  }}{% if not loop.last %}, {% endif %}{% endfor %}</li><br>{% endfor %}
+        </ul>
+
+
+        <b>Ingredients</b>
+        <ul>{% for each in ingredients %}
+            <li>{{  each.decode('utf-8')  }}</li>
+            {% endfor %}</ul>
+            <b>Instructions</b>
+            <ul>{% for each in instructions %}
+                <li>{{  each.decode('utf-8') }}</li>
+            {% endfor %}</ul>
             </ul>
-            <div>
-
-                <ul>
-                    <li><b>Ingredients</b></li>
-                    <ul>{% for each in ingredients %}
-                        <li>{{  each.decode('utf-8')  }}</li>
-                        {% endfor %}</ul>
-
-                    </ul>
-
-                    <ul>
-                        <li><b>Instructions</b></li>
-                        <ul>{% for each in instructions %}
-                            <li>{{  each.decode('utf-8') }}</li>
-                            {% endfor %}</ul>
-                        </ul>
-                        <div>
-                            
-                            <div>
-                                <img src="{{  this_recipe.recipe_image_url  }}" alt="{{  this_recipe.title  }}" class="img-fluid center" >
-                            </div>
 
 
 
-                            <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-                                              </div>
+            <img src="{{  this_recipe.recipe_image_url  }}" alt="{{  this_recipe.title  }}" class="img-fluid center" >
+
+        </div>
+    </div>
 </div>
-</div>
+
 {% endblock %}
