--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
 </head>
 
 
+
 <nav class="navbar navbar-default">
   <div class="container-fluid">
    <!--     Brand and toggle get grouped for better mobile display--> 
@@ -25,10 +26,13 @@
 
 
   <!-- Collect the nav links, forms, and other content for toggling -->
-  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    <ul class="nav navbar-nav">
-     <li><a href="/userprofile">My Profile</a></li>
-      <li class="dropdown">
+
+  {% if session.get('user_id') == True %}
+
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+       <li><a href="/userprofile">My Profile</a></li>
+       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Friends<span class="caret"></span></a>
         <ul class="dropdown-menu">
           {% for friend in this_user.friends %}
@@ -36,20 +40,21 @@
             {% if friend.friends.first_name is not none %}   
             {{ friend.friends.first_name }}
             {% else %}
-            
+
             {%endif %}
 
             {% if friend.friends.first_name is not none %}   
             {{ friend.friends.last_name }}
             {% else %}
-            
+
             {%endif %}
             ({{ friend.friends.email }})</a></li>
             {% endfor %}
             <li role="separator" class="divider"></li>
             <li><a href="/findfriend">Add a new friend</a></li>
+            <li><a href="/findmanyfriends">Add multiple friends</a></li>
           </ul>
-          
+
         </li>
 
 
@@ -62,7 +67,7 @@
             <li role="separator" class="divider"></li>
             <li><a href="/addaparty">Create a party</a></li>
           </ul>
-          
+
         </li>
 
       </ul>    
@@ -71,7 +76,16 @@
       </ul>
 
     </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+
+  {% else %}
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="/register">Register</a></li>
+        <li><a href="/login">Log in</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  {% endif %}
+</div><!-- /.container-fluid -->
 </nav>
 
 
