Converted to Large App structure
Using Miguel Grinberg's Flask book, converted the app to a large app structure in packages and modules, using Flask blueprints.
Also, updated the model file to be better formatted for viewing
in a split screen.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -109,6 +109,10 @@
   {% endblock %}
 </div>
 
+{% block scripts %}
+{{ super() }}
+{{ moment.include_moment() }}
+{% endblock %}
 
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </div>
