--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -7,10 +7,13 @@
 <div class="page-header">
     <h1>Login</h1>
 </div>
-<div class="col-md-4">
-    {{ wtf.quick_form(form) }}
-    <br>
-    <p>Forgot your password? <a href="{{ url_for('auth.password_reset_request') }}">Click here to reset it</a>.</p>
-    <p>New user? <a href="{{ url_for('auth.register') }}">Click here to register</a>.</p>
+
+
+<div class="row well-spaced" style="padding-top: 10em">
+    <div class="col-md-4 col-md-offset-4">
+        <div class = "row round_hidden_div" style="padding-top: 2em">
+            {{ wtf.quick_form(form) }}
+        </div>
+    </div>
 </div>
 {% endblock %}
