--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,8 +30,8 @@
        <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Friends<span class="caret"></span></a>
         <ul class="dropdown-menu">
-          {% for friend in this_user.friends %}
-          <li><a href={{ url_for('main.user', username=current_user.username) }}
+          {% for friend in session.friends_dict %}
+          <li><a href={{ url_for('main.show_friend_profile', variable=friend. ) }}
 
             "/friendprofile/{{ friend.friends.user_id }}">
             {% if friend.friends.first_name is not none %}   
@@ -52,7 +52,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Parties<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            {% for party in this_user.parties %}
+            {% for party in session.parties %}
             <li><a href="/party_profile/{{ party.party_id }}">{{  party.title  }}</a></li>
             {% endfor %}
             <li role="separator" class="divider"></li>
