--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,5 +1,4 @@
 {% extends "base.html" %}
-{% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}Kind Table - Login{% endblock %}
 
@@ -8,12 +7,15 @@
     <h1>Login</h1>
 </div>
 
-
 <div class="row well-spaced" style="padding-top: 10em">
     <div class="col-md-4 col-md-offset-4">
         <div class = "row round_hidden_div" style="padding-top: 2em">
-            {{ wtf.quick_form(form) }}
-        </div>
+            <form class="form form-horizontal" method='POST' role="form" name="login">
+                {{ form.csrf_token }}
+                <p>Email address:<br>{{ form.email  }}<br>
+                 Password:<br>{{ form.password  }}<br><br>
+                {{ form.submit  }}  Remember me: {{ form.remember_me  }}
+            </form>
     </div>
 </div>
 {% endblock %}
